--- a/src/components/DisplayInfor.scss
+++ b/src/components/DisplayInfor.scss
@@ -1,8 +1,12 @@
 .display-infor-container{
     .red{
         color: red;
-      }
-      .green{
+    }
+    .green{
         color: green;
-      }
+    }
+    img{
+        width: 400px;
+        height: 400px;
+    }
 }
