--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app-container{
+  .header-container{
+    .navbar-nav{
+      .nav-link{
+        &.active{
+          color: blue;
+        }
+      }
+    // }.nav-link.active{
+    //   color: blue
+    // }
+  }
+}
+}
