--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ body {
     .navbar-nav{
       .nav-link{
         &.active{
-          color: blue;
+          color: rgb(10, 202, 173);
         }
       }
     // }.nav-link.active{
