--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
-
 body {
   padding: 0;
   margin: 0;
@@ -9,17 +8,97 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.app-container{
-  .header-container{
-    .navbar-nav{
-      .nav-link{
-        &.active{
+@media (min-width: 1400px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1783px !important;
+  }
+}
+
+.app-container {
+  .header-container {
+
+    .btn-login {
+      margin-right: 15px;
+      padding: 0 15px;
+      border: 1px solid #6a6868;
+      border-radius: 5px;
+      height: 40px;
+    }
+
+    .btn-signup {
+      margin-right: 15px;
+      border-radius: 5px;
+      padding: 0 15px;
+      border: 1px solid #363333;
+      background: #000000;
+      color: #e9dbdb;
+      height: 40px;
+
+      &:hover {
+        background: #6e5d5d;
+      }
+    }
+
+    .navbar {
+      z-index: 10;
+      background-color: rgba(0, 0, 0, 0) !important;
+      padding-top: 30px;
+
+      .nav-link {
+        &.active {
           color: rgb(10, 202, 173);
         }
       }
-    // }.nav-link.active{
-    //   color: blue
-    // }
+    }
   }
-}
+
+  .homepage-container {
+    .homepage-content {
+      position: relative;
+      padding: 0 100px;
+      margin-top: 100px;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      .title-1 {
+        font-weight: 600;
+        font-size: 45px;
+      }
+
+      .title-2 {
+        font-size: 22px;
+      }
+
+      .title-3 {
+        button {
+          margin-right: 15px;
+          border-radius: 5px;
+          padding: 0 15px;
+          border: 1px solid #363333;
+          background: #000000;
+          color: #e9dbdb;
+          height: 40px;
+
+          &:hover {
+            background: #6e5d5d;
+          }
+        }
+      }
+    }
+
+  }
+
+  video {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+  }
 }
