--- a/src/App.scss
+++ b/src/App.scss
@@ -8,17 +8,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (min-width: 1400px) {
+// @media (min-width: 1400px) {
 
-  .container,
-  .container-lg,
-  .container-md,
-  .container-sm,
-  .container-xl,
-  .container-xxl {
-    max-width: 1783px !important;
-  }
-}
+//   .container,
+//   .container-lg,
+//   .container-md,
+//   .container-sm,
+//   .container-xl,
+//   .container-xxl {
+//     max-width: 1783px !important;
+//   }
+// }
 
 .app-container {
   .header-container {
@@ -48,7 +48,7 @@ body {
     .navbar {
       z-index: 10;
       background-color: rgba(0, 0, 0, 0) !important;
-      padding-top: 30px;
+      padding-top: 20px;
 
       .nav-link {
         &.active {
@@ -61,7 +61,7 @@ body {
   .homepage-container {
     .homepage-content {
       position: relative;
-      padding: 0 100px;
+      padding: 0 140px;
       margin-top: 100px;
       width: 50%;
       display: flex;
@@ -98,7 +98,7 @@ body {
 
   video {
     position: fixed;
-    top: 0;
+    bottom: -60px;
     width: 100vw;
   }
 }
