--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -13,6 +13,7 @@
         .admin-header {
             height: 40px;
             border: 1px solid green;
+            padding-left: 10px;
         }
 
         .admin-main {
